[package]
name = "tuxdroid"
version = "0.1.0"
authors = ["Marvin Schmidt <marv@exherbo.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = ">=0.5.2"
hidapi = ">=1.0.1"
itertools = "*"

[dev-dependencies]
ctrlc = "*"
